--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -44,23 +44,23 @@ The pore volume is calculated by random sampling of the accessible and inaccessi
 
 In most of the studies in this thesis, we will consider rigid structures interacting with guest adsorbates; the intramolecular interactions will not play any role in the simulations since the ionic, chemical or metallic  bonds between the atoms of a same molecule are predefined at a given set of distances and remain the same. As discussed in the final chapter, this approximation can generate discrepancies between the theoretical model and the experiments. However, since the goal is to achieve screening approaches like the ones introduced in the first chapter, adding flexibility in the intramolecular interactions would reduce considerably the size of the database that could be screened. For these reasons, the term ``interaction energy'' will designate the guest--host and guest--guest intermolecular interactions mainly --- host--host interactions would compromise the assumption on the rigidity of the framework.
 
-In classical theory of molecular physics, the intermolecular interactions can be categorized in three different types according to their strength: (i) the ion--dipole and ion--induced dipole forces ($40$--$600$~\si{\kilo\joule\per\mol}), (ii) the hydrogen bonding ($10$--$50$~\si{\kilo\joule\per\mol}), and (iii) the van der Waals forces ($1$--$10$~\si{\kilo\joule\per\mol}). Note that these energy values are only indicative and the interaction depends on the nature of the molecules, but it allows us to rank the different foreces according to their strength; and to complete the molecular interactions picture, we can add that the ionic and covalent bonding will always be stronger than any intermolecular interactions (over $100$~\si{\kilo\joule\per\mol}). The generic term ``van der Waals interactions'' actually regroups three different concepts usually called Keesom, Debye and London interactions. The Keesom interaction focuses on the electrostatic interaction between permanent multipoles (representing the electronic density around the molecules),\autocite{keesom1915second} while the Debye induction force corresponds to the interaction between a multipole of a molecule and an induced multipole of another one,\autocite{Roberts_1938} and the London dispersion interaction occurs between instantaneous multipoles created by natural fluctuations in the electron density around polarizable atoms.\autocite{london1930theorie,polanyi1932section} To quantify these interactions, we can consider dipole interactions since they are the most influential in the multipole expansion of the electron density. The Keesom interaction potential $V\e{K}$ can therefore be reduced to the dipole--dipole interaction, which depends on the inverse third power of the distance for fixed dipoles; but in fluid phases we are interested in, the average over all the angles is rather given by the inverse sixth power as described in the equation~\ref{eq:keesom} below:
+In classical theory of molecular physics, the intermolecular interactions can be categorized in three different types according to their strength: (i) the ion--dipole and ion--induced dipole forces ($40$--$600$~\si{\kilo\joule\per\mol}), (ii) the hydrogen bonding ($10$--$50$~\si{\kilo\joule\per\mol}), and (iii) the van der Waals forces ($1$--$10$~\si{\kilo\joule\per\mol}). Note that these energy values are only indicative and the interaction depends on the nature of the molecules, but it allows us to rank the different foreces according to their strength; and to complete the molecular interactions picture, we can add that the ionic and covalent bonding will always be stronger than any intermolecular interactions (over $100$~\si{\kilo\joule\per\mol}). The generic term ``van der Waals interactions'' actually regroups three different concepts usually called Keesom, Debye and London interactions. The Keesom interaction focuses on the electrostatic interaction between permanent multipoles (representing the electronic density around the molecules),\autocite{keesom1915second} while the Debye induction force corresponds to the interaction between a multipole of a molecule and an induced multipole of another one,\autocite{Roberts_1938} and the London dispersion interaction occurs between instantaneous multipoles created by natural fluctuations in the electron density around polarizable atoms.\autocite{london1930theorie,polanyi1932section} To quantify these interactions, we can consider dipole interactions since they are the most influential in the multipole expansion of the electron density. The Keesom interaction potential $U\e{K}$ can therefore be reduced to the dipole--dipole interaction, which depends on the inverse third power of the distance for fixed dipoles; but in fluid phases we are interested in, the average over all the angles is rather given by the inverse sixth power as described in the equation~\ref{eq:keesom} below:
 \begin{equation}\label{eq:keesom}
-  V\e{K} = -\dfrac{\mu_1^2\mu_2^2}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times\dfrac{1}{ 1.5k\e{B}T}
+  U\e{K} = -\dfrac{\mu_1^2\mu_2^2}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times\dfrac{1}{ 1.5k\e{B}T}
 \end{equation}
-where $\mu_1$ and $\mu_2$ are the dipole moments of the molecules $1$ and $2$, $\epsilon_0$ the vacuum dielectric permittivity and $\epsilon_r$ relative permittivity of the surrounding material, k\e{B} the Boltzmann constant, $T$ the temperature and $r$ the intermolecular distance. The Debye interaction potential $V\e{D}$ being reduced to the permanent dipole--induced dipole interactions can now be expressed using the electric polarizability $\alpha_1$ and $\alpha_2$ of the molecule $2$ as shown in equation~\ref{eq:debye}.
+where $\mu_1$ and $\mu_2$ are the dipole moments of the molecules $1$ and $2$, $\epsilon_0$ the vacuum dielectric permittivity and $\epsilon_r$ relative permittivity of the surrounding material, k\e{B} the Boltzmann constant, $T$ the temperature and $r$ the intermolecular distance. The Debye interaction potential $U\e{D}$ being reduced to the permanent dipole--induced dipole interactions can now be expressed using the electric polarizability $\alpha_1$ and $\alpha_2$ of the molecule $2$ as shown in equation~\ref{eq:debye}.
 \begin{equation}\label{eq:debye}
-  V\e{D} = -\dfrac{\mu_1^2\alpha_2 + \mu_2^2\alpha_1}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times\dfrac{1}{k\e{B}T}
+  U\e{D} = -\dfrac{\mu_1^2\alpha_2 + \mu_2^2\alpha_1}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times\dfrac{1}{k\e{B}T}
 \end{equation}
-Finally, the London dispersion interaction potential $V\e{L}$ is now the fluctuating dipole--induced dipole interaction and can be expressed as follows:
+Finally, the London dispersion interaction potential $U\e{L}$ is now the fluctuating dipole--induced dipole interaction and can be expressed as follows:
 \begin{equation}\label{eq:london}
-  V\e{L} = -\dfrac{\alpha_1\alpha_2}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times1.5\dfrac{I_1 I_2}{I_1+I_2}
+  U\e{L} = -\dfrac{\alpha_1\alpha_2}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times1.5\dfrac{I_1 I_2}{I_1+I_2}
 \end{equation}
 where $I_1$ and $I_2$ are the first ionization energies. We can note that the van der Waals potentials are all negative (attractive interaction) and depend on the inverse sixth power of the distance --- considering only the dipole moments. Before moving to the computational modelization of these long-distance intermolecular forces, we need to specify the repulsive force that occurs at very short distances; this force can be explained by the impossibility for electrons of both atoms to occupy the same quantum space as stated by Pauli in his exclusion principle.
 
-For the system we are studying in this thesis, the adsorption of noble gases in nanoporous materials, the guest--guest and guest--host interactions can be described by the induction and dispersion interactions only. We will use a simplistic model, the Lennard-Jones (LJ) potential $V\e{LJ}$,\autocite{LJ_1924} that relies on a repulsive term for the Pauli exclusion principle and an attractive term to model the attractive van der Waals component of the interaction, as shown below:
+For the system we are studying in this thesis, the adsorption of noble gases in nanoporous materials, the guest--guest and guest--host interactions can be described by the induction and dispersion interactions only. We will use a simplistic model, the Lennard-Jones (LJ) potential $U\ex{LJ}$,\autocite{LJ_1924} that relies on a repulsive term for the Pauli exclusion principle and an attractive term to model the attractive van der Waals component of the interaction, as shown below:
 \begin{equation}\label{eq:LJ}
-  V\e{LJ} = 4\epsilon \left(\left(\dfrac{\sigma}{r}\right)^{12} - \left(\dfrac{\sigma}{r}\right)^{6}\right)
+  U\ex{LJ} = 4\epsilon \left(\left(\dfrac{\sigma}{r}\right)^{12} - \left(\dfrac{\sigma}{r}\right)^{6}\right)
 \end{equation}
 where $\epsilon$ is the depth of the well (minimal energy) and $\sigma$ is the distance at which the potential is zero. The forcefield defines the LJ parameters $\epsilon$ and $\sigma$ for either all atom pairs or only for the same type of atoms. For the commonly used universal forcefield (UFF),\autocite{rappe1992} only the parameters for atoms of the same nature are defined and the parameters of the pair atoms can be induced using combining rules. In this thesis, we will use the UFF forcefield (because it performs well compared with \emph{ab initio} forcefield \autocite{McDaniel_2015}) and the Lorentz-Berthelot mixing rules to combine the LJ parameters --- it makes an arithmetic average of the $\sigma$ values (Lorentz rule) and a geometric one of the $\epsilon$ values (Berthelot rule). Finally, to reduce the computation time, we usually set a cutoff distance at which the LJ potential can be considered negligible. At this cutoff distance, we can for example apply a shift so that the energy equals zero at the cutoffs (discontinuity of energy), just truncate (discontinuity of the force), or use a tail switching function to make the tail converge smoothly to zero near the cutoff. To make it simple, in most of the simulations in the screenings, a shifting strategy combined with a cutoff of \SI{12}{\angstrom} have been used.
 
@@ -614,7 +614,7 @@ We first study a few examples of the category of materials where ambient-pressur
     \label{fgr:LJ}
   \end{figure}
 
-In the case of KAXQIL, the channels are one-dimensional tubes (see Figure~\ref{fgr:SI:examples:KAXQIL}) and the distance between two adsorption sites is approximately the unit cell parameter along the direction of the tube (\SI{5.6}{\angstrom}). There the selectivity increases with pore filling, for enthalpic reasons, which we can explain by relatively simple reasoning. The Lennard-Jones potentials $V\e{LJ}$ can be estimated for all species at \SI{5.6}{\angstrom}: $V\e{Xe-Xe}=-1.0$\,\si{\kilo\joule\per\mol}, $V\e{Kr-Kr}=-0.3$\,\si{\kilo\joule\per\mol} and $V\e{Xe-Kr}=-0.5$\,\si{\kilo\joule\per\mol}. In a simplistic model where all adsorbed molecules are \SI{5.6}{\angstrom} apart, the cooperative effect is higher between two xenon molecules, which explains the increased selectivity at high uptake. If we look further at the adsorption enthalpy of both xenon and krypton (\emph{cf.} Table~\ref{tbl:thermo}), they both increase: the guest molecules move from the ``ideal'' adsorption sites, and the guest--guest interactions do not fully compensate. The selectivity change in this material is therefore a consequence of the guest--guest interactions that rearranges the position of the adsorbates inside the nanopores.
+In the case of KAXQIL, the channels are one-dimensional tubes (see Figure~\ref{fgr:SI:examples:KAXQIL}) and the distance between two adsorption sites is approximately the unit cell parameter along the direction of the tube (\SI{5.6}{\angstrom}). There the selectivity increases with pore filling, for enthalpic reasons, which we can explain by relatively simple reasoning. The Lennard-Jones potentials $U\ex{LJ}$ can be estimated for all species at \SI{5.6}{\angstrom}: $U\ex{LJ}\e{Xe-Xe}=-1.0$\,\si{\kilo\joule\per\mol}, $U\ex{LJ}\e{Kr-Kr}=-0.3$\,\si{\kilo\joule\per\mol} and $U\ex{LJ}\e{Xe-Kr}=-0.5$\,\si{\kilo\joule\per\mol}. In a simplistic model where all adsorbed molecules are \SI{5.6}{\angstrom} apart, the cooperative effect is higher between two xenon molecules, which explains the increased selectivity at high uptake. If we look further at the adsorption enthalpy of both xenon and krypton (\emph{cf.} Table~\ref{tbl:thermo}), they both increase: the guest molecules move from the ``ideal'' adsorption sites, and the guest--guest interactions do not fully compensate. The selectivity change in this material is therefore a consequence of the guest--guest interactions that rearranges the position of the adsorbates inside the nanopores.
 
 \begin{figure*}[h]
   \centering
@@ -624,7 +624,7 @@ In the case of KAXQIL, the channels are one-dimensional tubes (see Figure~\ref{f
     \label{fgr:SI:examples:KAXQIL}
   \end{figure*}
 
-To further corroborate the role of the guest--guest interactions, we look at another material with one-dimensional tubelike channels: JUFBIX, a cobalt(II) coordination polymer based on carboxylic acid linkers (see Figure~\ref{fgr:SI:examples:JUFBIX}).\autocite{JUFBIX} The periodicity along the direction of the tubes is much higher at $7.2$\,\si{\angstrom}. The pair interaction energies corresponding to the LJ potentials at this distance are $V\e{Xe-Xe}=-0.24$\,\si{\kilo\joule\per\mol}, $V\e{Kr-Kr}=-0.06$\,\si{\kilo\joule\per\mol} and $V\e{Xe-Kr}=-0.13$\,\si{\kilo\joule\per\mol}. By looking at the adsorption enthalpies (Table \ref{tbl:effect}), these values are too small to affect the position of the adsorbed molecules. At high loading, the distance between adsorbed molecules is high, and every adsorption site is independent of the others. The ambient-pressure selectivity $s\e{1}$ is therefore the same as the low-pressure selectivity $s\e{0}$, since every guest--guest interactions are negligible. It confirms the crucial role of cooperative effects between guest molecules when considering a saturated material.
+To further corroborate the role of the guest--guest interactions, we look at another material with one-dimensional tubelike channels: JUFBIX, a cobalt(II) coordination polymer based on carboxylic acid linkers (see Figure~\ref{fgr:SI:examples:JUFBIX}).\autocite{JUFBIX} The periodicity along the direction of the tubes is much higher at $7.2$\,\si{\angstrom}. The pair interaction energies corresponding to the LJ potentials at this distance are $U\ex{LJ}\e{Xe-Xe}=-0.24$\,\si{\kilo\joule\per\mol}, $U\ex{LJ}\e{Kr-Kr}=-0.06$\,\si{\kilo\joule\per\mol} and $U\ex{LJ}\e{Xe-Kr}=-0.13$\,\si{\kilo\joule\per\mol}. By looking at the adsorption enthalpies (Table \ref{tbl:effect}), these values are too small to affect the position of the adsorbed molecules. At high loading, the distance between adsorbed molecules is high, and every adsorption site is independent of the others. The ambient-pressure selectivity $s\e{1}$ is therefore the same as the low-pressure selectivity $s\e{0}$, since every guest--guest interactions are negligible. It confirms the crucial role of cooperative effects between guest molecules when considering a saturated material.
 
 \begin{figure*}[h]
   \centering
