--- a/thesis.bib
+++ b/thesis.bib
@@ -1763,6 +1763,15 @@ for Global Competitiveness},
   year={2001},
   publisher={Elsevier}
 }
+@book{frenkel2001md,
+  title={Understanding molecular simulation: from algorithms to applications},
+  author={Frenkel, Daan and Smit, Berend},
+  volume={1},
+  pages={63--105},
+  chapter=4,
+  year={2001},
+  publisher={Elsevier}
+}
 @book{auerbach2003handbook,
   title={Handbook of zeolite science and technology},
   author={Auerbach, Scott M and Carrado, Kathleen A and Dutta, Prabir K},
@@ -3469,4 +3478,36 @@ URL = {https://doi.org/10.1137/0216006},
   author = {Katharina Peikert and Frank Hoffmann and Michael Fr\"{o}ba},
   title = {Amino substituted Cu3(btc)2: a new metal{\textendash}organic framework with a versatile functionality},
   journal = {Chemical Communications}
+}
+@article{Maginn_2020,
+	doi = {10.33011/livecoms.1.1.6324},
+	url = {https://doi.org/10.33011%2Flivecoms.1.1.6324},
+	year = 2020,
+	publisher = {University of Colorado at Boulder},
+	volume = {2},
+	number = {1},
+	author = {Edward J. Maginn and Richard A. Messerly and Daniel J. Carlson and Daniel R. Roe and J. Richard Elliot},
+	title = {Best Practices for Computing Transport Properties 1. Self-Diffusivity and Viscosity from Equilibrium Molecular Dynamics [Article v1.0]},
+	journal = {LiveCoMS}
+}
+@article{einstein1905motion,
+  title={On the motion of small particles suspended in liquids at rest required by the molecular-kinetic theory of heat},
+  author={Einstein, Albert and others},
+  journal={Annalen der physik},
+  volume={17},
+  number={549-560},
+  pages={208},
+  year={1905}
+}
+@article{Fick_1855,
+	doi = {10.1002/andp.18551700105},
+	url = {https://doi.org/10.1002%2Fandp.18551700105},
+	year = 1855,
+	publisher = {Wiley},
+	volume = {170},
+	number = {1},
+	pages = {59--86},
+	author = {Adolf Fick},
+	title = {Ueber Diffusion},
+	journal = {Ann. Phys. Chem.}
 }
